This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

12-Apr-2002 (Lars Duening)  (3.3.442)
  - (xalloc.c) Corrected a compilation error when MALLOC_TRACE was not
       defined.

12-Apr-2002 (Lars Duening)  (3.3.441)
  - (smalloc.c) Adjacent free small blocks are now merged automatically
       as soon as they are detected. This reduces the mem_consolidation()
       call to detecting and freeing totally unused small chunks.
  - (xalloc.c) The block dump of lost blocks now prints a proper hexdump
       instead of just dumping the data as-is.

11-Apr-2002 (Lars Duening)  (3.3.440)
  - (smalloc.c) A bit of code cleanup; and in preparation for the planned
       automatic small block defragmentation introduced 'free' flags for
       small blocks and a minimum payload size.

09-Apr-2002 (Lars Duening)  (3.3.439)
  - (efuns.c, strfuns, func_spec) Efuns filter() and map() can be used on
       strings.

09-Apr-2002 (Lars Duening)  (3.3.438)
  - (heartbeat.c) Removed the pooled allocation of heartbeat structures:
       Muds have spikes of high callout usage, but a low usage over
       the longterm average, so most of the pooled structures are not
       used. This more than makes up for any malloc overhead saved
       by the pooled allocation.
  - (heartbeat.c) Errors in a heartbeat execution now longer aborts
       the whole heartbeat cycle (suggested by Baba).
  - (efuns.c, main, mudlib/sys/debug_info.h) The boot time is now
       available through debug_info(DINFO_DATA, DID_STATUS).
  - (wizlist) The wizlist now accounts the evalcost split into
       ticks and gigaticks, to be able to handle long uptimes, and also
       offer a non-decaying total sum of the evalcosts (suggested by
       Baba).

07-Apr-2002 (Lars Duening)  (3.3.437)
  - (mud/lp-245) Adapted the set_this_object() usage in the master.
  - (actions.c) Efun remove_action() can now remove all actions defined