@@ -1,9 +1,17 @@
 SYNOPSIS
-        string save_value (mixed value)
+        string save_value (mixed value [, int format])
 
 DESCRIPTION
         Encode the <value> into a string suitable for restoration with
         restore_value() and return it.
+
+        In both forms, the optional <format> argument determines the
+        format of the savefile to be written:
+
+           -1: use the driver's native format (default).
+            0: original format, used by Amylaar LPMud and LDMud <= 3.2.8 .
+            1: LDMud >= 3.2.9: no-lambda closures, symbols, quoted arrays
+                 can be saved.
 
         The created string consists of two lines, each terminated with
         a newline character: the first line describes the format used to
@@ -16,7 +24,8 @@ DESCRIPTION
 HISTORY
         Introduced in LDMud 3.2.8.
         LDMud 3.2.9 added the saving of non-lambda closures, symbols,
-        and quoted arrays, using a new savefile format version.
+          and quoted arrays, using the new savefile format version 1.
+        LDMud 3.2.10 added the <format> argument.
 
 SEE ALSO
         restore_value(E), restore_object(E), save_object(E)
